# flask-ishuman

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
flask_ishuman/: __init__.py
tests/: main.py
