[metadata]
name = flask_ishuman
version = attr: flask_ishuman.__version__
author = Ari Archer
author_email = ari.web.xyz@gmail.com
url = https://ari-web.xyz/gh/flask-ishuman
description = simple flask captcha validation
long_description = file: README.md
long_description_content_type = text/markdown
keywords = flask, captcha, recaptcha, audio captcha, image captcha, human validation
license = GPLv3+
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Security
    Typing :: Typed

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    more-captcha
    flask
    types-Flask

[options.package_data]
* = *.typed

[bdist_wheel]
universal = 1
